--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="flip-card">
         <div class="flip-card-front">
           <div class="inner">
-            <img src="https://i.imgur.com/C9DWUDi.png" class="icon" />
+            <img src="img/avengers.png" class="icon" />
             <h3>avengers</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis
@@ -28,7 +28,7 @@
         </div>
         <div class="flip-card-back">
           <div class="inner">
-            <img src="https://i.imgur.com/aJauAJV.png" class="icon" />
+            <img src="img/iron-man.png" class="icon" />
             <h3>iron man</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
@@ -40,7 +40,7 @@
       <div class="flip-card">
         <div class="flip-card-front">
           <div class="inner">
-            <img src="https://i.imgur.com/C9DWUDi.png" class="icon" />
+            <img src="img/avengers.png" class="icon" />
             <h3>avengers</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis
@@ -50,7 +50,7 @@
         </div>
         <div class="flip-card-back">
           <div class="inner">
-            <img src="https://i.imgur.com/ep0HjjD.png" class="icon" />
+            <img src="img/thor.png" class="icon" />
             <h3>thor</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
@@ -62,7 +62,7 @@
       <div class="flip-card">
         <div class="flip-card-front">
           <div class="inner">
-            <img src="https://i.imgur.com/C9DWUDi.png" class="icon" />
+            <img src="img/avengers.png" class="icon" />
             <h3>avengers</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis
@@ -72,7 +72,7 @@
         </div>
         <div class="flip-card-back">
           <div class="inner">
-            <img src=" https://i.imgur.com/wROMxVv.png" class="icon" />
+            <img src="img/spider-man.png" class="icon" />
             <h3>spider-man</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
