--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
 </head>
 <body>
+    
+    <h1>MARVEL</h1>
+
+    <div class="container">
     <div class="flip-card">
         <div class="flip-card-front">
           <div class="inner">
@@ -31,8 +35,9 @@
             <img src="img/iron-man.png" class="icon" />
             <h3>iron man</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
-              voluptatum eius quam debitis, sit amet sunt neque ipsum?
+             "The Truth is, I'm Iron Man" <br>
+             "I Love You 3000" <br>
+             "Genius, billionaire, playboy, philanthropist." <br>
             </p>
           </div>
         </div>
@@ -53,8 +58,9 @@
             <img src="img/thor.png" class="icon" />
             <h3>thor</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
-              voluptatum eius quam debitis, sit amet sunt neque ipsum?
+                “I am Thor, son of Odin!” <br>
+                “I’d rather be a good man than a great king.” <br>
+                “Loki, I thought the world of you. I thought we were gonna fight side by side forever.”
             </p>
           </div>
         </div>
@@ -75,11 +81,14 @@
             <img src="img/spider-man.png" class="icon" />
             <h3>spider-man</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
-              voluptatum eius quam debitis, sit amet sunt neque ipsum?
+            “Where Are You From, Kid?” “Queens.” “Brooklyn.” <br>
+            “Mr. Stark, I Don’t Feel So Good.” <br>
+            “Oh, we’re using our made-up names. I’m Spider-Man then.” <br>
+
             </p>
           </div>
         </div>
       </div>
+    </div>
 </body>
 </html>
